# vulkan-cpp-library

./: .gitignore  CMakeLists.txt  CMakeLists.txt.freeglut.in  CMakeLists.txt.gli.in  CMakeLists.txt.glm.in  CMakeLists.txt.glslang.in  CMakeLists.txt.googletest.in  CMakeLists.txt.openvr.in  CMakeLists.txt.png.in  CMakeLists.txt.spirv-headers.in  CMakeLists.txt.spirv-tools.in  CMakeLists.txt.zlib.in  Paths.props  README.md  settings.gradle  vulkan-cpp.sln
nativeactivity/: build.gradle
nativeactivity/src/main/: AndroidManifest.xml
sample/cube/: .gitignore  CMakeLists.txt  build.gradle  cube-frag.frag  cube.cpp  cube.vert
sample/cube/cube/: cube.vcxproj  cube.vcxproj.filters
sample/cube/src/: cube.cpp
sample/cube/src/main/: AndroidManifest.xml
sample/cube/src/main/res/values/: strings.xml
sample/heightmap/: CMakeLists.txt  build.gradle
sample/heightmap/src/: heightmap-frag.frag  heightmap-tesc.tesc  heightmap-tese.tese  heightmap-vert.vert  heightmap.cpp
sample/heightmap/src/main/: AndroidManifest.xml
sample/heightmap/src/main/res/values/: strings.xml
sample/lighting/: CMakeLists.txt  build.gradle  lighting-frag.frag  lighting.cpp  lighting.frag  lighting.vert  teapot.h
sample/lighting/lighting/: lighting.vcxproj  lighting.vcxproj.filters
sample/lighting/src/: lighting.cpp
sample/lighting/src/main/: AndroidManifest.xml
sample/lighting/src/main/res/values/: strings.xml
sample/normal-mapping-and-cube-texture/: CMakeLists.txt  build.gradle  normal-mapping-and-cube-texture-frag.frag  normal-mapping-and-cube-texture.cpp  normal-mapping-and-cube-texture.vert
sample/normal-mapping-and-cube-texture/normal-mapping-and-cube-texture/: normal-mapping-and-cube-texture.vcxproj  normal-mapping-and-cube-texture.vcxproj.filters
sample/normal-mapping-and-cube-texture/src/: normal-mapping-and-cube-texture.cpp
sample/normal-mapping-and-cube-texture/src/main/: AndroidManifest.xml
sample/normal-mapping-and-cube-texture/src/main/assets/: storforsen4.ktx
sample/normal-mapping-and-cube-texture/src/main/res/values/: strings.xml
sample/openvr/: CMakeLists.txt  glut.cpp  openvr.cpp  vr.cpp
sample/openvr/include/: async_cache.h  gl_objects.h  glut_object.h  thread_pool.h  vr.h
sample/openvr/openvr/: openvr.vcxproj  openvr.vcxproj.filters
sample/openvr/src/: gl_objects.cpp  glut.cpp  openvr-vert.vert  openvr.cpp  vr.cpp
sample/teapot/: CMakeLists.txt  build.gradle  teapot-frag.frag  teapot.cpp  teapot.h
sample/teapot/src/: teapot-vert.vert  teapot.cpp
sample/teapot/src/main/: AndroidManifest.xml
sample/teapot/src/main/res/values/: strings.xml
sample/teapot/teapot/: teapot.vcxproj  teapot.vcxproj.filters
spirv-reflection/: CMakeLists.txt
spirv-reflection-test/: CMakeLists.txt
spirv-reflection-test/spirv-reflection-test/: spirv-reflection-test.vcxproj  spirv-reflection-test.vcxproj.filters
spirv-reflection-test/src/: input_test.cpp  input_test1.vert  push_constant_test.cpp  push_constant_test1.comp  specialization_constant_test.cpp  specialization_constant_test1.comp  subpass_test.cpp  subpass_test1.frag  uniform_buffer_test.cpp  uniform_buffer_test1.comp
spirv-reflection/include/reflection/: analyzer.h  types.h
spirv-reflection/include/reflection/internal/: argument_parser.h  includes.h  intermediate_types.h
spirv-reflection/spirv-reflection/: spirv-reflection.vcxproj  spirv-reflection.vcxproj.filters
spirv-reflection/src/: analyzer.cpp
textures/normal-mapping/: source.txt
tools/: obj2gl.cpp
types/: .cproject  .project  CMakeLists.txt  build.gradle
types-test/: .cproject  .project  CMakeLists.txt
types-test/src/: merge_type_test.cpp  serialize_type_test.cpp  storage_type_test.cpp  transform_type_test.cpp  view_type_test.cpp
types-test/types-test/: types-test.vcxproj  types-test.vcxproj.filters
types/include/type/: internal.h  memory.h  merge.h  revision.h  serialize.h  storage.h  supplier.h  transform.h  types.h  view.h
types/src/: memory.cpp  serialize.cpp
types/types/: types.vcxproj  types.vcxproj.filters
vcc/: CMakeLists.txt  build.gradle
vcc-image/: CMakeLists.txt  build.gradle
vcc-image/include/vcc/: image_loader.h
vcc-image/include/vcc/internal/: loader.h
vcc-image/src/: android_loader.cpp  gli_loader.cpp  image.cpp  png_loader.cpp
vcc-image/vcc-image/: vcc-image.vcxproj  vcc-image.vcxproj.filters
vcc-test/: CMakeLists.txt
vcc-test/src/: compute_shader_integration_test.cpp  integration-test-1.comp
vcc-test/vcc-test/: vcc-test.vcxproj  vcc-test.vcxproj.filters
vcc/include/vcc/: android_asset_istream.h  buffer.h  buffer_view.h  command.h  command_buffer.h  command_pool.h  debug.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  descriptor_set_update.h  device.h  enumerate.h  event.h  fence.h  framebuffer.h  image.h  image_view.h  input_buffer.h  instance.h  keycode.h  memory.h  physical_device.h  pipeline.h  pipeline_cache.h  pipeline_layout.h  push_constant.h  query_pool.h  queue.h  render_pass.h  sampler.h  semaphore.h  shader_module.h  surface.h  swapchain.h  util.h  window.h
vcc/include/vcc/data/: buffer.h
vcc/include/vcc/internal/: hook.h  raii.h
vcc/src/: android_asset_istream.cpp  buffer.cpp  buffer_view.cpp  command.cpp  command_buffer.cpp  command_pool.cpp  debug.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  enumerate.cpp  event.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  input_buffer.cpp  instance.cpp  main.cpp  memory.cpp  physical_device.cpp  pipeline.cpp  pipeline_cache.cpp  pipeline_layout.cpp  push_constants.cpp  queue.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  util.cpp  window.cpp
vcc/src/data/: data_buffer.cpp
vcc/vcc/: vcc.vcxproj  vcc.vcxproj.filters
